// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Тесты компонента Button Рендеринг Button без надписи соответствует снепшоту 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Тесты компонента Button Рендеринг Button с аттрибутом disabled cоответствует снепшоту 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  disabled={true}
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Тесты компонента Button Рендеринг Button с индикацией загрузки cоответствует снепшоту 1`] = `
<button
  className="text text_type_button text_color_primary button undefined loader "
  disabled={true}
  type="button"
>
  <img
    alt="Загрузка."
    className="loader_icon"
    src="loader.svg"
  />
</button>
`;

exports[`Тесты компонента Button Рендеринг Button с надписью соответствует снепшоту 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  type="button"
>
  <p
    className="text undefined"
  >
    Запуск
  </p>
</button>
`;
